--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab 9</title>
+<script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+<script>
+  window.TrackJS && TrackJS.install({ 
+    token: "6d92830f752f4cd3901561387803b584"
+  });
+</script>
+  
 
   <style>
     button {
@@ -95,10 +102,81 @@
       let firstNum = document.querySelector('#first-num').value;
       let secondNum = document.querySelector('#second-num').value;
       let operator = document.querySelector('#operator').value;
-      output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+      try {
+        output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+      } catch (error) {
+        console.error("Calculation error: ", error);
+        output.innerHTML = "Error";
+      } finally {
+        console.log("Calculation attempted");
+      }
     });
+    
+    window.onerror = function (message, source, lineno, colno, error) {
+      console.log("Global error: ");
+      console.log("Message: ", message);
+      console.log("Source: ", source);
+      console.log("Line No.: ", lineno);
+      console.log("Column No.: ", colno);
+      console.log("Error object: ", error);
+    }
 
+    class CustomError extends Error {
+      constructor(message) {
+        super(message);
+        this.name = "CustomError";
+      }
+    }
     let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
+    errorBtns[0].addEventListener('click', () => console.log("Console Log Demo"));
+    errorBtns[1].addEventListener('click', () => console.error("Console Error Demo"));
+    errorBtns[2].addEventListener('click', () => console.count("Count Button"));
+    errorBtns[3].addEventListener('click', () => console.warn("Console Warn Button"));    
+    errorBtns[4].addEventListener('click', () => console.assert(false, "Assert Demo"));    
+    errorBtns[5].addEventListener('click', () => console.clear());
+    errorBtns[6].addEventListener('click', () => console.dir(document.body));
+    errorBtns[7].addEventListener('click', () => console.dirxml(document.body));    
+    errorBtns[8].addEventListener('click', () => {
+      console.group("Grouped Logs");
+      console.log("inside group");
+    });    
+    errorBtns[9].addEventListener('click', () => console.groupEnd());    
+    errorBtns[10].addEventListener('click', () => {
+      const data = [
+        {name: "SWE", num: 110}, 
+        {name: "Theory", num: 105}, 
+        {name: "Advanced SWE", num: 112}, 
+      ]
+      console.table(data);
+    });      
+    errorBtns[11].addEventListener('click', () => console.time("timer button"));  
+    errorBtns[12].addEventListener('click', () => console.timeEnd("timer button"));  
+    errorBtns[13].addEventListener('click', () => {
+      function deepest() {
+        console.trace("Tracing stack");
+      }
+      function deeper() {
+        deepest();
+      }
+      function deep() {
+        deeper();
+      }
+      function handleClick() {
+        deep();
+      }
+      handleClick();
+    });
+    errorBtns[14].addEventListener('click', () => {
+      throw new CustomError("blob");
+    });  
+  
+
+
+
+
+
+
+
 
     // Start your code here
     // You may move this JS to another file if you wish
